Wrote doc comments and a README

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,5 @@ opt-level = 1
 opt-level = 3
 
 [dependencies]
-bevy = { version = "0.11.2", features = ["dynamic_linking"]}
+bevy = "0.11.3"
 bevy_xpbd_3d = { git = "https://github.com/Jondolf/bevy_xpbd", branch = "main" }
