--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,12 +2,12 @@
 name = "bevy_xpbd_interp"
 version = "0.1.0"
 edition = "2021"
+description = "A simple library for interpolation of bevy_xpbd rigidbodies"
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/rubengrim/bevy_xpbd_interp"
 
 [profile.dev]
 opt-level = 1
-
-[profile.dev.package."*"]
-opt-level = 3
 
 [dependencies]
 bevy = "0.11.3"
